# lar_analysis

./: .clangd  .rootlogon.C  cal_summary.ipynb  cenns10_ben_cevns.ipynb  cenns10_cevns.ipynb  cenns10_cevns.py  cenns10_response.ipynb  cohar750_10MeVe-.ipynb  cohar750_1MeVe-.ipynb  cohar750_200keVnr.ipynb  cohar750_ar39.C  cohar750_ar39.ipynb  cohar750_ar40_response.ipynb  cohar750_cevns.C  cohar750_cevns.ipynb  cohar750_co57.ipynb  cohar750_nest_test.C  cohar750_neutrons.C  cohar750_neutrons_multi.C  cohar750_signalpred.ipynb  cohar750_signalpred.py  cohar750_ss.C  cohar750_ss.ipynb  cohar750_ss_multi.C  gain_match.ipynb  ly.C  ly_neutrons.C  pb_ly.C  progressbar.hpp  pyproject.toml  slurm_job.sh  spe_summary.ipynb  xenon_doping.ipynb
