[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "awkward>=2.7.4",
    "hist[plot]>=2.8.0",
    "matplotlib>=3.9.4",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "uproot>=5.5.2",
]
